--- a/documentation/menu.html
+++ b/documentation/menu.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml">
     <!--<h3 class="underline">Documentation</h3>-->
     <!--<ul class="nav nav-tabs nav-stacked">-->
@@ -39,5 +38,6 @@
         <li>
             <a href="$nav-base/documentation/tei-mss-tutorials.html">Using TEI to Catalog Syriac Manuscripts</a>
         </li>
+        <li><a href="$nav-base/documentation/editors.html">Contributing Editors</a></li>
     </ul>
 </div>
