Update broken home page images.

--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
                 </div> 
             </div>
             <div class="col-flex bg-green text-center overflow-hidden">
-                    <h2 class="display-5">Research Questions</h2>
-                    <div class="row border-bottom" style="padding-bottom: 10px;">
-                        <div class="col-sm-3" style="background:url('resources/images/overall.svg') center no-repeat"/>
-                        <div class="col-sm-9 pull-right lead" style="text-align:left">How does Ibn Abi Usaybiʿa depict networks of interreligious knowledge exchange in the <em>History of Physicians</em>?
-                        </div>
+                <h2 class="display-5">Research Questions</h2>
+                <div class="row border-bottom" style="padding-bottom: 10px;">
+                    <div class="col-sm-3 overall"/>
+                    <div class="col-sm-9 pull-right lead" style="text-align:left">How does Ibn Abi Usaybiʿa depict networks of interreligious knowledge exchange in the <em>History of Physicians</em>?
                     </div>
-                    <div class="row" style="padding-top: 10px;">
-                        <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/who.svg" height="60vw"/><br/>Which persons, groups, and roles …</div>
-                        <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/where.svg" height="60vw"/><br/>Which places, place types, institutions, and social settings …</div>
-                        <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/how.svg" height="60vw"/><br/>Which communicative modes and types of social or scholarly encounters …</div>
+                </div>
+                <div class="row" style="padding-top: 10px;">
+                    <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/who.svg" height="60vw"/><br/>Which persons, groups, and roles …</div>
+                    <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/where.svg" height="60vw"/><br/>Which places, place types, institutions, and social settings …</div>
+                    <div class="col-sm-4 lead" style="text-align:left;"><img src="$nav-base/resources/images/how.svg" height="60vw"/><br/>Which communicative modes and types of social or scholarly encounters …</div>
+                </div>
+                <div class="row border-bottom" style="padding-bottom: 10px;">
+                    <img src="$nav-base/resources/images/bracket.svg" height="100%"/>            
+                    <div class="col-sm-12 lead">… are depicted as most central to knowledge exchange between communities?
+                        <br/>
+                        <br/>
                     </div>
-                    <div class="row border-bottom" style="padding-bottom: 10px;">
-                        <img src="$nav-base/resources/images/bracket.svg" height="100%"/>            
-                        <div class="col-sm-12 lead">… are depicted as most central to knowledge exchange between communities?
-                            <br/>
-                            <br/>
-                        </div>
+                </div>
+                <div class="row" style="padding-top: 10px;">
+                    <div class="col-sm-3 vs"/>
+                    <div class="col-sm-9 pull-right lead" style="text-align:left">How does Ibn Abi Usaybiʿa’s depiction of these people, places, and modes compare to their depiction in related sources?
                     </div>
-                    <div class="row" style="padding-top: 10px;">
-                        <div class="col-sm-3" style="background:url('resources/images/vs.svg') center no-repeat"/>
-                        <div class="col-sm-9 pull-right lead" style="text-align:left">How does Ibn Abi Usaybiʿa’s depiction of these people, places, and modes compare to their depiction in related sources?
-                        </div>
-                    </div>
+                </div>
             </div>
         </div>
     </div>
