--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                 <div class="container-fluid">
                     <h2>Objectives</h2>
                     <div class="row">
-                        <div class="col-sm-3" style="background:url('resources/images/encoding.svg') center no-repeat"/>
+                        <div class="col-sm-3" style="background:url('resources/images/encoding.svg') center no-repeat; min-height:125px;"/>
                         <div class="col-sm-9 pull-right lead" style="text-align:left">Render Ibn Abi Usaybiʿa’s historiographical assertions about interreligious interactions into a format that allows them to be queried and analyzed.            
                         </div>
                     </div>
                     <br/>
                     <div class="row">
-                        <div class="col-sm-3" style="background:url('resources/images/analysis.svg') center no-repeat"/>
+                        <div class="col-sm-3" style="background:url('resources/images/analysis.svg') center no-repeat;min-height:125px;"/>
                         <div class="col-sm-9 pull-right lead" style="text-align:left">Comprehensively evaluate the significance of places, persons, and means of communication involved in interreligious scholarly collaboration as profiled in <i>History of the Physicians</i>.</div>
                     </div>
                     <br/>
                     <div class="row">
-                        <div class="col-sm-3" style="background:url('resources/images/dissemination.svg') center no-repeat"/>
+                        <div class="col-sm-3" style="background:url('resources/images/dissemination.svg') center no-repeat;min-height:175px;"/>
                         <div class="col-sm-9 pull-right lead" style="text-align:left">Publicize the project’s methods, data, and results in open and stable formats.
                             <br/>
                             <br/>
