--- a/project-team.html
+++ b/project-team.html
@@ -7,16 +7,22 @@
             <div class="indent">
             <h3>General Editorial Committee</h3>
             <ul>
-                <li>Dr. Thomas A. Carlson, Oklahoma State University</li>
-                <li>Dr. Nathan P. Gibson, Vanderbilt University</li>
+                <li>Dr. Thomas A. Carlson, Oklahoma State University (2012-2017)</li>
+                <li>Dr. Nathan P. Gibson, Ludwig-Maximilians-Universität München</li>
                 <li>Dr. Jeanne-Nicole Mellon Saint-Laurent, Marquette University (Assistant Director)</li>
                 <li>Dr. David A. Michelson, Vanderbilt University (General Editor)</li>
-                <li>Dr. Daniel L. Schwartz, Texas A&amp;M University (Director)</li>                
+                <li>Dr. Daniel L. Schwartz, Texas A&amp;M University (Director)</li>
                 <li>Dr. James E. Walters, Rochester College, Michigan</li>
             </ul>
             <h3>Research Staff</h3>
             <ul>
                 <li>Winona Salesky, Independant Consultant (Senior Programmer)</li>
+            </ul>
+            <h3>Postdoctoral Research Assistants</h3>
+            <ul>
+                <li>Dr. Thomas A. Carlson, Princeton University (2012-2014)</li>
+                <li>Dr. Nathan Gibson, Vanderbilt University/Ludwig-Maximilians-Universität München (2015-2017)</li>
+                <li>Dr. Michelle M. Taylor, Vanderbilt University (2018-2019)</li>
             </ul>
             <h3>Advisory Committee</h3>
             <ul>
