Update missing srophe:tags
Related to new data.

--- a/geo/browse.html
+++ b/geo/browse.html
@@ -1,7 +1,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
     <div class="main-content-block">
         <h1 class="title about">Index of Places</h1>
-        <div data-template="browse:get-all" data-template-element="tei:place/tei:placeName[@syriaca-tags='#syriaca-headword']" data-template-collection="places">
+        <div data-template="browse:get-all" data-template-element="tei:place/tei:placeName[@srophe:tags='#syriaca-headword']" data-template-collection="places">
             <!-- Example limits data to places collection, see example entry in repo-config.xml -->    
             <!--        <div data-template="browse:get-all" data-template-collection="places">-->
             <div class="tabbable"> 
