--- a/taxonomy/record.html
+++ b/taxonomy/record.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" data-template="templates:surround" data-template-with="templates/subjects.html" data-template-at="content">
     <!--<xi:include href="banner.html"/>-->
     <div class="grey-dark">
@@ -10,12 +9,12 @@
                 <div class="col-md-8 column1">
                     <div class="indent interior-content white" style="margin-top:0; padding-top:0;">
                         <div data-template="app:display-nodes" data-template-paths="/descendant::tei:body"/>
-                        <div data-template="app:external-relationships" data-template-relType="skos:broadMatch" data-template-collection="subjects" data-template-count="all"/>
                     </div>
                 </div>
                 <div class="col-md-4 column2">
                     <div data-template="app:rec-status"/>
-                    <div data-template="app:display-related"/>
+                    <div data-template="app:internal-relationships" data-template-display="list-description"/>
+                    <div data-template="app:external-relationships" data-template-relType="skos:broadMatch" data-template-count="all"/>
                 </div>
             </div>
         </div>
