--- a/persons/browse.html
+++ b/persons/browse.html
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" data-template="templates:surround" data-template-with="templates/persons.html" data-template-at="content">
-    <xi:include href="banner.html"/>
+    <div class="banner-interior">
+    <span class="img-credit">
+        <label>Photo Credit:</label> "Women at the Tomb." Florence, Biblioteca Mediceo Laurenziana, cod. Plut. I, 56, f. 13a.
+        <button class="btn btn-link white-link" data-toggle="collapse" data-target="#img-rights">
+            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"/>
+        </button>
+        <span id="img-rights" class="collapse">
+            <br/>
+            Public domain image, originally published in C. Cecchelli, G. Furlani, and M. Salmi, <em>The Rabbula Gospels</em> (Olten and Lausanne, 1959).</span>
+    </span>
+</div>
     <h1 class="banner indent">Index of Persons</h1>
     <div class="main-content-block">
-    <div data-template="browse:get-all" data-template-element="tei:person/tei:persName[@syriaca-tags='#syriaca-headword']" data-template-collection="sbd">
+    <div data-template="browse:get-all" data-template-element="tei:person/tei:persName" data-template-collection="sbd">
         <!-- Example limits data to places collection, see example entry in repo-config.xml -->    
         <!--        <div data-template="browse:get-all" data-template-collection="places">-->
         <div class="tabbable"> 
