--- a/bhse/browse.html
+++ b/bhse/browse.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" data-template="templates:surround" data-template-with="templates/bhse.html" data-template-at="content">
     <h1 class="banner indent bhse">Browse Syriac Hagiographic Works</h1>
     <div class="main-content-block white">
