--- a/geo/browse.html
+++ b/geo/browse.html
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
     <div class="main-content-block">
         <h1 class="title about">Index of Places</h1>
-        <div data-template="browse:get-all" data-template-element="tei:place/tei:placeName" data-template-collection="places">
+        <div data-template="browse:get-all" data-template-element="tei:place/tei:placeName[@srophe:tags]" data-template-collection="places">
             <!-- Example limits data to places collection, see example entry in repo-config.xml -->    
             <!--        <div data-template="browse:get-all" data-template-collection="places">-->
             <div class="tabbable"> 
@@ -12,7 +11,7 @@
                         <a href="browse.html" default="default">English</a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=syr&amp;element=tei:place/tei:placeName&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
+                        <a href="browse.html?lang=syr&amp;element=tei:place/tei:placeName[@srophe:tags]&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
                         ܠܫܢܐ ܣܘܪܝܝܐ
                     </a>
                     </li>
