--- a/q/browse.html
+++ b/q/browse.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/q.html" data-template-at="content">
     <div class="q-banner-interior">
         <div class="indent">
@@ -6,7 +5,7 @@
         </div>
     </div>
     <div class="main-content-block">
-        <div data-template="browse:get-all" data-template-element="tei:person/tei:persName[@syriaca-tags='#syriaca-headword']" data-template-collection="q">
+        <div data-template="browse:get-all" data-template-element="tei:person/tei:persName[@srophe:tags]" data-template-collection="q">
             <!-- Example limits data to places collection, see example entry in repo-config.xml -->    
             <!--        <div data-template="browse:get-all" data-template-collection="places">-->
             <div class="tabbable"> 
