Uopdates for docker deployment. Fix slow map loading in persons modules.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
                 <span class="slide-credit">
                     <a href="geo/index.html" class="icon-container">
                         <span class="syriaca-icon syriaca-geo icon-nav">
-                            <span class="path1"/>
-                            <span class="path2"/>
-                            <span class="path3"/>
-                            <span class="path4"/>
+                            <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                         </span>
                         <span class="icon-text">Gazetteer</span>
                     </a>
@@ -46,10 +43,7 @@
                 <span class="slide-credit">
                     <a href="persons/index.html" class="icon-container">
                         <span class="syriaca-icon syriaca-sbd icon-nav">
-                            <span class="path1"/>
-                            <span class="path2"/>
-                            <span class="path3"/>
-                            <span class="path4"/>
+                            <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                         </span>
                         <span class="icon-text">SBD</span>
                     </a>
@@ -74,10 +68,7 @@
                 <span class="slide-credit">
                     <a href="q/index.html" class="icon-container">
                         <span class="syriaca-icon syriaca-q icon-nav">
-                            <span class="path1"/>
-                            <span class="path2"/>
-                            <span class="path3"/>
-                            <span class="path4"/>
+                            <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                         </span>
                         <span class="icon-text">Qadishe</span>
                     </a>
@@ -100,10 +91,7 @@
                 <span class="slide-credit">
                     <a href="authors/index.html" class="icon-container">
                         <span class="syriaca-icon syriaca-authors icon-nav">
-                            <span class="path1"/>
-                            <span class="path2"/>
-                            <span class="path3"/>
-                            <span class="path4"/>
+                            <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                         </span>
                         <span class="icon-text">Authors</span>
                     </a>
@@ -128,10 +116,7 @@
                 <span class="slide-credit">
                     <a href="bhse/index.html" class="icon-container">
                         <span class="syriaca-icon syriaca-bhse icon-nav">
-                            <span class="path1"/>
-                            <span class="path2"/>
-                            <span class="path3"/>
-                            <span class="path4"/>
+                            <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                         </span>
                         <span class="icon-text">BHSE</span>
                     </a>
