--- a/q/browse.html
+++ b/q/browse.html
@@ -38,7 +38,7 @@
                 <div class="tab-content">
                     <div class="tab-pane active">
                         <div class="row">
-                            <div data-template="browse:show-hits"/>
+                            <div data-template="browse:show-hits" data-template-collection="q"/>
                         </div>
                         <div data-template="app:pageination"/>
                     </div>
