Update browse pages to faster processing. Eliminate map on persons, for now, processing issues.

--- a/nhsl/browse.html
+++ b/nhsl/browse.html
@@ -22,12 +22,12 @@
                         <a href="browse.html" default="default">English</a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=syr&amp;element=tei:body/tei:bibl/tei:title[@srophe:tags]&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
+                        <a href="browse.html?lang=syr&amp;element=title&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
                             ܠܫܢܐ ܣܘܪܝܝܐ
                         </a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=ar&amp;element=tei:body/tei:bibl/tei:title&amp;alpha-filter=ا" lang="ar" dir="rtl">
+                        <a href="browse.html?lang=ar&amp;element=title&amp;alpha-filter=ا" lang="ar" dir="rtl">
                             اللغة العربية
                         </a>
                     </li>
