--- a/persons/browse.html
+++ b/persons/browse.html
@@ -22,12 +22,12 @@
                     <a href="browse.html" default="default">English</a>
                 </li>
                 <li>
-                    <a href="browse.html?lang=syr&amp;element=tei:person/tei:persName[@srophe:tags]&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
+                    <a href="browse.html?lang=syr&amp;element=title&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
                         ܠܫܢܐ ܣܘܪܝܝܐ
                     </a>
                 </li>
                 <li>
-                    <a href="browse.html?lang=ar&amp;element=tei:person/tei:persName&amp;alpha-filter=ا" lang="ar" dir="rtl">
+                    <a href="browse.html?lang=ar&amp;element=title&amp;alpha-filter=ا" lang="ar" dir="rtl">
                         اللغة العربية
                     </a>
                 </li>
@@ -37,9 +37,11 @@
                 <li>
                     <a href="browse.html?view=date">Date</a>
                 </li>
+                <!--
                 <li>
                     <a href="browse.html?view=map">Map</a>
                 </li>
+                -->
                 <li>
                     <a href="browse.html?view=facets">Advanced Browse</a>
                 </li>    
