--- a/q/browse.html
+++ b/q/browse.html
@@ -15,20 +15,20 @@
                         <a href="browse.html" default="default">English</a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=syr&amp;element=tei:person/tei:persName&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
+                        <a href="browse.html?lang=syr&amp;element=title&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
                             ܠܫܢܐ ܣܘܪܝܝܐ
                         </a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=ar&amp;element=tei:person/tei:persName&amp;alpha-filter=ا" lang="ar" dir="rtl">
+                        <a href="browse.html?lang=ar&amp;element=title&amp;alpha-filter=ا" lang="ar" dir="rtl">
                             اللغة العربية
                         </a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=en-x-gedsh&amp;element=tei:person/tei:persName&amp;alpha-filter=A">Transliteration</a>
+                        <a href="browse.html?lang=en-x-gedsh&amp;element=title&amp;alpha-filter=A">Transliteration</a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=fr&amp;element=tei:person/tei:persName&amp;alpha-filter=A">Français</a>
+                        <a href="browse.html?lang=fr&amp;element=title&amp;alpha-filter=A">Français</a>
                     </li>
                     <li>
                         <a href="browse.html?view=map">Map</a>
@@ -40,7 +40,7 @@
                         <div class="row">
                             <div data-template="browse:show-hits" data-template-collection="q"/>
                         </div>
-                        <div data-template="app:pageination"/>
+                        <div data-template="app:pageination" data-template-collection="q"/>
                     </div>
                 </div>
             </div>
