--- a/geo/browse.html
+++ b/geo/browse.html
@@ -11,12 +11,12 @@
                         <a href="browse.html" default="default">English</a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=syr&amp;element=tei:place/tei:placeName[@srophe:tags]&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
+                        <a href="browse.html?lang=syr&amp;element=title&amp;alpha-filter=ܐ" lang="syr" dir="rtl">
                         ܠܫܢܐ ܣܘܪܝܝܐ
                     </a>
                     </li>
                     <li>
-                        <a href="browse.html?lang=ar&amp;element=tei:place/tei:placeName&amp;alpha-filter=ا" lang="ar" dir="rtl">
+                        <a href="browse.html?lang=ar&amp;element=title&amp;alpha-filter=ا" lang="ar" dir="rtl">
                         اللغة العربية
                     </a>
                     </li>
