--- a/persons/index.html
+++ b/persons/index.html
@@ -1,6 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" data-template="templates:surround" data-template-with="templates/persons.html" data-template-at="content">
-    <xi:include href="banner.html"/>
+    <div class="banner-interior">
+    <span class="img-credit">
+        <label>Photo Credit:</label> "Women at the Tomb." Florence, Biblioteca Mediceo Laurenziana, cod. Plut. I, 56, f. 13a.
+        <button class="btn btn-link white-link" data-toggle="collapse" data-target="#img-rights">
+            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"/>
+        </button>
+        <span id="img-rights" class="collapse">
+            <br/>
+            Public domain image, originally published in C. Cecchelli, G. Furlani, and M. Salmi, <em>The Rabbula Gospels</em> (Olten and Lausanne, 1959).</span>
+    </span>
+</div>
     <div class="banner" style="margin-bottom:0;">
         <div class="row">
             <div class="col-md-offset-2 col-md-8">
@@ -110,6 +119,7 @@
         </div>
         <div class="col-md-4">
             <br/>
+            <!--
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Related places</h3>
@@ -120,6 +130,7 @@
                     </a>
                 </div>
             </div>
+            -->
         </div>
     </div>
 </div>
